fixing the code visibility on mobile

--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -292,7 +292,8 @@ and is ported straight from the Rougify CSS
 }
 
 pre {
-    padding: 5px
+    padding: 5px;
+    overflow-x: scroll;
 }
 
 code.highlighter-rouge {
